# seo-opportunity-miner

./: .env.example  README.md  docker-compose.yml  pyproject.toml
config/: manifest.json
configs/: project.json
data/: README.md
demo/: index.html
docs/: architecture.md  deployment.md  index.html  runbook.md
src/app/web/: index.html  styles.css
tests/: test_smoke.py
