
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-opportunity-miner"
version = "0.1.0"
description = "Turn noisy keyword and content inputs into prioritized SEO content opportunities and follow-up actions."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
